--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@kmamal/sdl": "^0.11.7",
     "@napi-rs/canvas": "^0.1.69",
     "skia-canvas": "^2.0.2"
   },
   "trustedDependencies": [
+    "@kmamal/sdl",
     "skia-canvas"
   ]
 }
