[BASE] skia-canvas

--- a/quick-lint-js.config
+++ b/quick-lint-js.config
@@ -2,10 +2,12 @@
   "globals": {
     "window": true,
     "canvas": true,
-    "w": true,
-    "h": true,
-    "pxw": true,
-    "pxh": true,
-    "c": true
+    "width": true,
+    "height": true,
+    "pixelWidth": true,
+    "pixelHeight": true,
+    "canvasContext": true,
+    "counter": true,
+    "imageAssets": true
   }
 }
